--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,8 @@
+* text=auto eol=lf
+
 /.yarn/**            linguist-vendored
 /.yarn/releases/*    binary
 /.yarn/plugins/**/*  binary
 /.pnp.*              binary linguist-generated
+
+dist/** -diff linguist-generated=true
