--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "format:write": "prettier --write .",
     "format:check": "prettier --check .",
     "lint": "eslint .",
-    "package": "rollup --config rollup.config.js"
+    "package": "rollup --config rollup.config.js",
+    "test": "NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 jest"
   },
   "packageManager": "yarn@4.8.1",
   "dependencies": {
@@ -40,12 +41,16 @@
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.8",
+    "@jest/globals": "^29.7.0",
     "@rollup/plugin-commonjs": "^28.0.3",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "eslint": "^9.24.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-prettier": "^5.2.6",
+    "jest": "^29.7.0",
+    "nock": "^14.0.3",
     "prettier": "^3.5.3",
     "prettier-eslint": "^16.3.0",
     "rollup": "^4.39.0"
