--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -30,18 +30,6 @@ jobs:
         with:
           fetch-depth: 0
 
-      # - name: Enable corepack
-      #   run: corepack enable
-
-      # - name: Setup Node.js
-      #   uses: actions/setup-node@v4
-      #   with:
-      #     node-version: "20"
-      #     cache: yarn
-
-      # - name: Install Dependencies
-      #   run: yarn install --immutable
-
       - name: Lint Codebase
         id: super-linter
         uses: super-linter/super-linter/slim@v8
@@ -49,7 +37,6 @@ jobs:
           DEFAULT_BRANCH: main
           FILTER_REGEX_EXCLUDE: dist/**/*
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          # LINTER_RULES_PATH: ${{ github.workspace }}
           VALIDATE_ALL_CODEBASE: true
           VALIDATE_JSCPD: false
-          VALIDATE_JSON: false
+          VALIDATE_NATURAL_LANGUAGE: false
