--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-prettier": "^5.2.6",
     "jest": "^29.7.0",
+    "make-coverage-badge": "^1.2.0",
     "nock": "^14.0.3",
     "prettier": "^3.5.3",
     "prettier-eslint": "^16.3.0",
