--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
   "dependencies": {
     "@actions/core": "^1.11.1",
     "@actions/http-client": "^2.2.3",
-    "banditypes": "^0.2.5"
+    "banditypes": "^0.2.5",
+    "jwt-decode": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.8",
