--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -39,9 +39,10 @@ jobs:
         id: super-linter
         uses: super-linter/super-linter/slim@v8
         env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BRANCH: main
           FILTER_REGEX_EXCLUDE: dist/**/*
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          LINTER_RULES_PATH: .
           VALIDATE_ALL_CODEBASE: true
           VALIDATE_JSCPD: false
           VALIDATE_NATURAL_LANGUAGE: false
