--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -59,3 +59,5 @@ jobs:
           VALIDATE_ALL_CODEBASE: true
           VALIDATE_JSCPD: false
           VALIDATE_NATURAL_LANGUAGE: false
+          VALIDATE_BIOME_FORMAT: false
+          VALIDATE_BIOME_LINT: false
