Disable trivy linter

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -61,3 +61,4 @@ jobs:
           VALIDATE_NATURAL_LANGUAGE: false
           VALIDATE_BIOME_FORMAT: false
           VALIDATE_BIOME_LINT: false
+          VALIDATE_TRIVY: false
