--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
     steps:
       - name: Checkout
         id: checkout
-        uses: actions/checkout@v6
+        uses: actions/checkout@v6 # zizmor: ignore[unpinned-uses] trusted source
         with:
           persist-credentials: false
 
@@ -32,7 +32,7 @@ jobs:
         run: corepack enable
 
       - name: Setup Node.js
-        uses: actions/setup-node@v6
+        uses: actions/setup-node@v6 # zizmor: ignore[unpinned-uses] trusted source
         with:
           node-version: "20"
           cache: yarn
@@ -51,7 +51,7 @@ jobs:
 
       - name: Upload static files as artifact
         if: ${{ github.event_name != 'pull_request' }}
-        uses: actions/upload-pages-artifact@v4
+        uses: actions/upload-pages-artifact@v4 # zizmor: ignore[unpinned-uses] trusted source
         with:
           path: ./.github/pages
 
@@ -66,7 +66,7 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v4
+        uses: actions/deploy-pages@v4 # zizmor: ignore[unpinned-uses] trusted source
 
   live-test:
     name: GitHub Actions Test
@@ -80,7 +80,7 @@ jobs:
     steps:
       - name: Checkout
         id: checkout
-        uses: actions/checkout@v6
+        uses: actions/checkout@v6 # zizmor: ignore[unpinned-uses] trusted source
         with:
           persist-credentials: false
 
